<resources>
    <string name="app_name">cookery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_receipts">Receipts</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_shopping_list">Shopping list</string>
    <string name="menu_campaign">Campaign</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="no_data">There isn\'t data</string>
    <string name="min">min</string>
    <string name="servings">servings</string>
</resources>
