<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/receipts_icon"
            android:title="@string/menu_receipts" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/favorite_icon"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/shopping_list_icon"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_campaign"
            android:icon="@drawable/compaign_icon"
            android:title="@string/menu_campaign" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/stores_icon"
            android:title="@string/menu_stores" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
    </group>

</menu>
